[package]
name = "flowsim"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey McAteer <jeffrey@jmcateer.com>"]


[dependencies]
fastrand = "2.0"


[dependencies.wgpu]
version = "0.19"
features = [ "wgsl", "glsl" ]


[profile.release]
debug = 1
# https://deterministic.space/high-performance-rust.html
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug-assertions = false
incremental = false

# We have RUSTFLAGS="-C target-cpu=native" in our profile
